crates/compiler/cypress/tests/snapshots/test_parse__list_closing_same_indent_no_trailing_comma_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "myList = [\n    0,\n    1,\n]\n42\n"
---
(BeginFile
    (BeginTopLevelDecls
        (BeginAssignDecl
            Ident=>LowerIdent@0
            InlineAssign=>OpAssign@1
            (BeginList Num=>Int@3 Num=>Int@5 EndList)
        EndAssignDecl)
        HintExpr
        Num=>Int@8
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
Assign(Ident("myList"), List([IntBase10("0"), IntBase10("1")]))
IntBase10("42")

[=== formatted below ===]

