crates/compiler/cypress/tests/snapshots/test_parse__list_minus_newlines_expr_formatted.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "[\n    K,\n]\n- i\n"
---
(BeginFile
    (BeginTopLevelDecls
        (*
            HintExpr
            (BeginList UpperIdent=>UpperIdent@1 EndList)
            InlineBinOpMinus=>OpBinaryMinus@4
            Ident=>LowerIdent@5
        EndBinOpMinus)
    EndTopLevelDecls)
EndFile)

[=== canfmt below ===]
BinOp(List([UpperIdent("K")]), Minus, Ident("i"))

[=== formatted below ===]

