crates/compiler/cypress/tests/snapshots/test_parse__lowest_int_expr.snap
---
source: crates/compiler/cypress/tests/test_parse.rs
description: "-9223372036854775808\n"
---
(BeginFile (BeginTopLevelDecls HintExpr Num=>Int@0 EndTopLevelDecls) EndFile)

[=== canfmt below ===]
IntBase10("-9223372036854775808")

[=== formatted below ===]

